fix testcases